--- a/src/MUSI6106Exec/CMakeLists.txt
+++ b/src/MUSI6106Exec/CMakeLists.txt
@@ -2,6 +2,7 @@ set (APP MUSI6106Exec)
 
 set (AudioLIB AudioFileIO)
 set (CombFilterLIB CombFilter)
+set (FftLIB Fft)
 ## get all source files (note: this is considered bad style, one could also add file names individually)
 file(GLOB ${APP}_SOURCES RELATIVE ${CMAKE_SOURCE_DIR}/src/${APP} *.c;*.cpp;*.txt)
 file(GLOB ${APP}_HEADERS RELATIVE ${CMAKE_SOURCE_DIR}/src/${APP} *.h;../inc/*.h)
@@ -13,5 +14,5 @@ add_inc_directories ()
 add_executable(${APP} ${${APP}_SOURCES} ${${APP}_HEADERS})
 
 # link the libraries
-target_link_libraries(${APP} ${LIB} ${AudioLIB} ${CombFilterLIB} ${SndLIB} ${OS_LIBS})
+target_link_libraries(${APP} ${LIB} ${AudioLIB} ${FftLIB} ${CombFilterLIB} ${SndLIB} ${OS_LIBS})
 
