--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,8 +23,7 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DWITH_TESTS=1 -DWITH_DOXYGENTARGET=1
-
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DWITH_TESTS=1
     - name: Build
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
@@ -38,7 +37,6 @@ jobs:
   build-docs:
     name: builds docs and publish
     runs-on: macos-latest
-    needs: build
 
     steps:
     - uses: actions/checkout@v2
@@ -48,6 +46,7 @@ jobs:
       with:
         working-directory: '.'
         doxyfile-path: ${{github.workspace}}/build/docs/doxy.config'
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DWITH_TESTS=1 -DWITH_DOXYGENTARGET=1
  
     # store the doc files
     - name: Upload Output Directory
