--- a/src/Tests/TestExec/CMakeLists.txt
+++ b/src/Tests/TestExec/CMakeLists.txt
@@ -8,6 +8,7 @@ set (VibratoLIB Vibrato)
 set (AudioLIB AudioFileIO)
 set (SndLIB sndlib)
 set (FftLIB Fft)
+set (FastConvLIB FastConv)
 
 
 list (APPEND PROJECT_INCLUDES ${CMAKE_SOURCE_DIR}/3rdparty/googletest/${TestLIB}/include)
@@ -30,6 +31,6 @@ add_inc_directories ()
 add_executable(${APP} ${${APP}_SOURCES} ${${APP}_HEADERS} ${${APP}_SOURCES_TEST} ${${APP}_HEADERS_TEST})
 
 # link the libraries
-target_link_libraries(${APP} ${LIB} ${TestLIB} ${FftLIB} ${VibratoLIB} ${FilterLIB} ${AudioLIB} ${SndLIB} ${OS_LIBS})
+target_link_libraries(${APP} ${LIB} ${TestLIB} ${FftLIB} ${FastConvLIB} ${VibratoLIB} ${FilterLIB} ${AudioLIB} ${SndLIB} ${OS_LIBS})
 
 
