--- a/src/MUSI6106Exec/CMakeLists.txt
+++ b/src/MUSI6106Exec/CMakeLists.txt
@@ -4,6 +4,7 @@ set (AudioLIB AudioFileIO)
 set (CombFilterLIB CombFilter)
 set (FftLIB Fft)
 set (VibratoLIB Vibrato)
+set (FastConvLIB FastConv)
 
 ## get all source files (note: this is considered bad style, one could also add file names individually)
 file(GLOB ${APP}_SOURCES RELATIVE ${CMAKE_SOURCE_DIR}/src/${APP} *.c;*.cpp;*.txt)
@@ -16,5 +17,5 @@ add_inc_directories ()
 add_executable(${APP} ${${APP}_SOURCES} ${${APP}_HEADERS})
 
 # link the libraries
-target_link_libraries(${APP} ${LIB} ${AudioLIB} ${FftLIB} ${VibratoLIB} ${CombFilterLIB} ${SndLIB} ${OS_LIBS})
+target_link_libraries(${APP} ${LIB} ${AudioLIB} ${FftLIB} ${FastConvLIB} ${VibratoLIB} ${CombFilterLIB} ${SndLIB} ${OS_LIBS})
 
