--- a/src/Tests/TestExec/CMakeLists.txt
+++ b/src/Tests/TestExec/CMakeLists.txt
@@ -30,6 +30,6 @@ add_inc_directories ()
 add_executable(${APP} ${${APP}_SOURCES} ${${APP}_HEADERS} ${${APP}_SOURCES_TEST} ${${APP}_HEADERS_TEST})
 
 # link the libraries
-target_link_libraries(${APP} ${LIB} ${TestLIB} ${FftLIB} ${VibratoLIB} ${FilterLIB} ${AudioLIB} ${SndLIB} ${OS_LIBS})
+target_link_libraries(${APP} ${LIB} ${TestLIB} ${FftLIB} ${VibratoLIB} ${FilterLIB} ${DtwLIB} ${AudioLIB} ${SndLIB} ${OS_LIBS})
 
 
